--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
-  "name": "blog",
+  "name": "digital-garden-starter",
   "version": "1.0.0",
-  "description": "Irregularly updated blog about random things. See at https://ibnishak.github.io/blog/",
-  "main": "index.js",
+  "description": "Template Repo for digital garden starter",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "develop": "gatsby develop",
+    "rebuild": "gatsby clean && gatsby build",
+    "build": "gatsby build --prefix-paths",
+    "clean": "gatsby clean",
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public"
   },
-  "keywords": [],
-  "author": "",
-  "license": "AGPL-3.0",
-  "devDependencies": {
-    "gh-pages": "^5.0.0"
+  "dependencies": {
+    "gatsby": "^2.32.13",
+    "gatsby-theme-garden": "https://github.com/ibnishak/digital-garden-theme.git",
+    "gh-pages": "^3.1.0"
   }
 }
